# Trends-App

./: config.json  main.py  pyproject.toml
