[tool.poetry]
name = "trends-app"
version = "0.1.0"
description = ""
authors = ["Andrew Sameh <andrew.zameh@gmail.com>"]
readme = "README.md"
packages = [{include = "trends_app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
openai = "^0.26.5"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
